<resources>
    <string name="app_name"> ClickAdopta</string>

    <!-- TODO: Titulos activitys Toolbar -->
    <string name="title_activity_actions">ClickAdopta</string>
    <string name="title_activity_apadrina">Apadrina</string>
    <string name="title_activity_contacto">Contacto</string>
    <string name="title_activity_donde">Ubicación</string>
    <string name="title_activity_gatos">Gatos</string>
    <string name="title_activity_perros">Perros</string>
    <string name="title_activity_voluntariado">Voluntariado</string>
    <string name="title_activity_quienes">Quienes</string>
    <string name="texto">Si no puedes adoptar, apadrina

No siempre se tiene la posibilidad de tener un animal en casa.

A veces, por problemas de espacio o por no disponer de tiempo suficiente, es imposible tener un animal de compañía en nuestro hogar.

Ofrecemos la posibilidad de apadrinar uno de nuestros perros o gatos.

Tu nombre figurará en la ficha del animal que aparece en nuestra web y podrás venir a verlo siempre que quieras, dentro de los horarios de visita del refugio (ver CONTACTO).

Si apadrinas a un perro, puedes venir a pasearlo por los alrededores del refugio. Y si apadrinas un gato, estará encantado de que vengas a acariciarlo y a hacerle compañía.</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="apadrina_logo">Perro apadrinado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_voluntariado">Necesitamos personas comprometidas</string>
    <string name="perros_voluntariado">Perros</string>
    <string name="gatos_voluntariado">Gatos</string>
    <string name="perros2_voluntariado">Ver PDF</string>
    <string name="texto1">prueba1</string>
    <string name="texto2">prueba2</string>
    <string name="texto3">prueba3</string>
    <string name="voluntariado">Necesitamos personas comprometidas</string>
    <string name="voluntariado1">Unete al voluntariado</string>
    <string name="voluntariado3">Si quieres ser voluntariado de la Lliga, por favor, lee nuestro plan de voluntariado y si crees que reunes los requisitos necesarios, haz clic en el formulario y rellenalo con los datos que pide</string>
    <string name="perrosB">PERROS</string>
    <string name="gatosB">GATOS</string>
    <string name="Tperros">Formulario para perros</string>
    <string name="Tgatos">Formulario para gatos</string>
    <string name="ubicacion">Liga para la protección de Animales i Plantas de Barcenlona</string>

    <string name="ubicacion2">c/ Guarda Antón, 10 08035 - Barcelona - ESPAÑA</string>
    <string name="llamenos">Llamenos: Tel. (+34) 934 170 124</string>
    <string name="email">info@protectorabcn.es</string>
    <string name="equipo1">El órgano de gobierno de la asociación es la Junta Directiva, compuesta por voluntarios y socios, y elegida por la asamblea de socios. Todas estas personas están implicadas en el funcionamiento diario del refugio, son voluntarios con años de experiencia y, por lo tanto, conocen la problemática de la entidad y del abandono y el maltrato de animales en general.</string>
    <string name="equipo2">La plantilla de trabajadores está compuesta por ocho personas: una directora, un administrativo, una veterinaria, cuatro cuidadores de perros y una cuidadora de gatos. El personal cuenta con el apoyo a diario de los voluntarios, quienes, además, asumen todas las tareas de mantenimiento y atención al público durante los festivos y fines de semana.</string>
    <string name="equipo3">No todo el trabajo del voluntariado se desarrolla en el refugio. Muchos aportan destrezas y conocimientos profesionales para organizar eventos, actualizar y mantener la web, gestionar la presencia de la Lliga en las redes sociales, diseñar campañas, captar nuevos socios y padrinos, negociar con proveedores, localizar patrocinadores y todas aquellas actividades que contribuyan a fortalecer una entidad densa y viva como la Lliga.</string>
    <string name="equipo4">Los animales se entregan desparasitados, vacunados, castrados y con el correspondiente microchip identificativo. En caso de que el animal sea demasiado joven para ser esterilizado y/o vacunado, el adoptante asume el compromiso de realizar ambos tratamientos en las fechas y clínicas que indique la Lliga. Su coste ya está incluido en los gastos de adopción. </string>
    <string name="tittle_equipo">CONOCENOS</string>
    <string name="contacto1">Contacta con nosotros!</string>
    <string name="sombreado1">e-mail</string>
    <string name="asunto">Asunto</string>
    <string name="sombreado2">Inserta el texto aqui</string>
    <string name="enviar">ENVIAR</string>
    <string name="horario">HORARIO:</string>
    <string name="horario_perrera">Lunes - Viernes \nPerros: 10 a 17:30h \nGatos 10 a 15:30h \nSabados Domingos y Festivos \n10 a 13h</string>
    <string name="msgRegisterBarSubject">Mensaje ClickAdopta</string>
    <string name="noticias">NOTICIAS NUEVOS ANIMALES</string>
    <string name="sinconexion">Sin conexion</string>
    <string name="apadrina">FORMULARIO APADRINAMIENTO</string>
    <string name="registrar">REGISTRATE</string>
    <string name="entrar">ENTRAR</string>
    <string name="SALIR">SALIR</string>


</resources>
