<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="local.gonzalez.clickadopta.Contacto_Fragment"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/contacto1"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:hint="@string/email" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/asunto"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="24dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/enviarmail"
                android:hint="@string/sombreado2" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bSend"
            android:text="@string/enviar"
            android:layout_gravity="right"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/Widget.AppCompat.Button.Colored"
            android:background="@color/colorAccent"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/horario"
            android:textColor="@color/green"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:textSize="24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/horario_perrera"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:textSize="22dp" />


    </LinearLayout>
</FrameLayout>
