<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="local.gonzalez.clickadopta.Apadrina_Fragment"
    android:layout_marginTop="?attr/actionBarSize">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:id="@+id/scroll1">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="0dp"
            android:paddingTop="0dp"
            android:weightSum="0">

            <ImageView
                android:id="@+id/imagenLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/apadrina_logo"
                android:gravity="center"
                android:scaleType="center"
                android:src="@drawable/apadrina_un_perro" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto"
                    android:textSize="20sp" />

            </LinearLayout>

            <Button
                android:id="@+id/apadrina"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/apadrina"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colortoolbarbttn" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
