<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_actions"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_actions"
        app:menu="@menu/activity_actions_drawer">

    </android.support.design.widget.NavigationView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="0dp"
        android:paddingTop="80dp"
        android:weightSum="0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/voluntariadotext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_voluntariado"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/perros_voluntariado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp"
                    android:onClick="download"
                    android:text="@string/perros_voluntariado" />

                <Button
                    android:id="@+id/gatos_voluntariado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/perros_voluntariado"
                    android:onClick="view"
                    android:text="@string/perros2_voluntariado" />

            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


</android.support.v4.widget.DrawerLayout>