<ScrollView android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="local.gonzalez.clickadopta.Quienes_Fragment"
    android:layout_marginTop="?attr/actionBarSize">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/layout_id1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/equipo1"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:src="@drawable/equipo1" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:text="@string/equipo1" />

        </LinearLayout>

        <!--Separador 1-->
        <LinearLayout
            android:id="@+id/layout_separador"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout_id1"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="4dp"
            android:background="@color/common_google_signin_btn_text_dark_disabled"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/layout_id2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_id1"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/equipo2"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:src="@drawable/equipo2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equipo2" />

        </LinearLayout>
        <!--Separador 1-->
        <LinearLayout
            android:id="@+id/layout_separador1"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout_id2"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="4dp"
            android:background="@color/common_google_signin_btn_text_dark_disabled"
            android:orientation="horizontal" />

        <LinearLayout
            android:id="@+id/layout_id3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_id2"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/equipo3"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:src="@drawable/equipo1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equipo3" />

        </LinearLayout>
        <!--Separador 1-->
        <LinearLayout
            android:id="@+id/layout_separador2"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/layout_id3"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="4dp"
            android:background="@color/common_google_signin_btn_text_dark_disabled"
            android:orientation="horizontal" />

        <LinearLayout

            android:id="@+id/layout_id4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_id3"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/equipo4"
                android:layout_width="120dp"
                android:layout_height="100dp"
                android:layout_marginTop="2dp"
                android:src="@drawable/equipo1" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/equipo4" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>